#    yt/server/node/tablet_node/serialize.cpp - if the version differs, then the update should be done with tablet cell recreation.

* ermolovd: Update type validation. Update via snapshot.
* ermolovd: Introduced new time-related logical types. Update via snapshot.
* ignat: Update operations archive to version 31 (core_info added).
* ifsmirnov: Changed semantics in merging dynamic table nodes. Update masters via snapshot.
* avmatrosov: Added copy for replicated tables. Update masters via snapshot.
* ifsmirnov: Estimated creation time map. Update masters via snapshot.
* akozhikhov: Added new users for tablet system activity. Update masters via snapshot.
* babenko: Some recent fix in portal destruction requires masters to be updated via snapshot.
* savrus: Moved tablet manager config to dynamic configs. Update masters via snapshot.
* ermolovd: Enabled null type in schema. Update masters via snapshot.
* savrus: Allowed to change tablet cell bundle options on fly in 42a67269eb. Update masters via snapshot.
* savrus: Introduced reigns in 63bd34940. Do not need to follow fbe2670bc16 instruction to remove tablet cells.
* babenko: More portal exit attributes. Update masters via snapshot.
* babenko: Transaction depth limit introduced. Update masters via snapshot.
* ifsmirnov: Multilevel chunklists for dynamic tables. Update masters via snapshot.
* babenko: Introduce Cypress shard objects. Update masters via snapshot.
* babenko: Initial support for Cypress portals. Update masters via snapshot.
* ifsmirnov: Chunk views are now saved into chunks' Parents_ array. Update masters via snapshot.
* shakurov: Commit 61ba9b7fe9 has changed mutation semantics for unlock and tx abort. Update masters via snapshot.
* ifsmirnov: Changed semantics around required columns in replication log. Remove tablet cells before cluster update.
* ermolovd: New variant_tuple and variant_struct types. Update masters via snapshot.