@@ -79,7 +79,8 @@ DEFINE_ENUM(EMasterReign,
     ((YT_10952_DelayedMembershipClosureRecomputation)                (836))  // babenko
     ((YT_10726_StagedChunkExpiration)                                (837))  // shakurov
     ((ChunkViewToParentsArray)                                       (838))  // ifsmirnov
-    ((YT_10639_CumulativeStatisticsInDynamicTables)                  (839))  // ifsmirnov
+    ((FixTableStatistics)                                            (839))  // savrus
+    ((YT_10639_CumulativeStatisticsInDynamicTables)                  (899))  // ifsmirnov
     ((PortalsInitial)                                                (900))  // babenko
     ((CypressShards)                                                 (901))  // babenko
     ((BulkInsert)                                                    (902))  // savrus
